--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 0 * * *"
 jobs:
   cleanup:
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
       - uses: actions/delete-package-versions@v5.0.0
         with:
