--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -3,6 +3,7 @@ run-name: Cleaning up old images
 on:
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch: {}
 jobs:
   cleanup:
     runs-on: ubuntu-latest
